fix some glitch with view transition on mobile chrome

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -12,6 +12,12 @@
     background-color: var(--color-background-canvas);
   }
 
+  ::view-transition-group(root),
+  ::view-transition-old(root),
+  ::view-transition-new(root) {
+    animation: none;
+  }
+
   @media (prefers-reduced-motion) {
     ::view-transition-group(*),
     ::view-transition-old(*),
