--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -39,5 +39,6 @@
 
   #tz-select {
     view-transition-name: form;
+    view-transition-class: form;
   }
 }
